<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_nowplaying"
        android:title="@string/menu_nowplaying_title"
        android:icon="@drawable/ic_nowplaying_unselected"
        android:checkable="true"/>

    <item
        android:id="@+id/menu_popular"
        android:title="@string/menu_popular_title"
        android:icon="@drawable/ic_popular_unselected"
        android:checkable="true"/>

    <item
        android:id="@+id/menu_toprated"
        android:title="@string/menu_toprated_title"
        android:icon="@drawable/ic_toprated_unselected"
        android:checkable="true"/>

    <item
        android:id="@+id/menu_upcoming"
        android:title="@string/menu_upcoming_title"
        android:icon="@drawable/ic_upcoming_unselected"
        android:checkable="true"/>

</menu>