<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:background="@drawable/bg_white_black_stroke"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ivUserAvatar"
        app:layout_constraintTop_toTopOf="@+id/ivUserAvatar"
        android:text="@string/tvDummyUsername"
        android:fontFamily="@font/roboto_black"/>

    <TextView
        android:id="@+id/tvuserRatingnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        app:layout_constraintStart_toStartOf="@+id/tvUserName"
        android:text="@string/tvDummyRatenYear"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/seared_grey"/>

    <TextView
        android:id="@+id/tvContentReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:lines="7"
        android:maxLines="15"
        android:maxWidth="260dp"
        android:ellipsize="end"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvuserRatingnDate"
        app:layout_constraintStart_toStartOf="@id/tvUserName"
        android:text="@string/tvDummyOverview"
        android:fontFamily="@font/roboto_light"/>

</androidx.constraintlayout.widget.ConstraintLayout>