<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivPosterMovie"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/ivPosterMovie"
        app:layout_constraintEnd_toEndOf="@+id/ivPosterMovie"
        app:layout_constraintTop_toBottomOf="@+id/ivPosterMovie"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tvDummyMovieName"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tvMovieOriginalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/ivPosterMovie"
        app:layout_constraintEnd_toEndOf="@+id/ivPosterMovie"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tvDummyMovieOriginalName"
        android:textSize="14sp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvMovieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieOriginalName"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:drawableStart="@drawable/ic_rating"
        android:text="@string/tvDummyRating"
        tools:ignore="UseCompatTextViewDrawableXml" />

</androidx.constraintlayout.widget.ConstraintLayout>